--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -4,8 +4,8 @@
     <div id="progress">
       <div class="bar" style="width: 0%;"></div>
     </div>
-    <div class="field">
-      <%= f.label :file, "Click below or simply drag and drop files here" %><br />
+    <div class="btn btn-primary" id="btn-pc">
+      <%= f.label :file, "Computer" %>
       <%= f.file_field :file, multiple: true, name: 'image[file]' %>
     </div>
   <% end %>
