--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,136 +1,134 @@
-<div id="content">
 
-  <div id="section_1" class="section_container">
-    <h1>Welcome to PixelPic</h1>
-    <div class="section_inner_container">
-      <h2>About</h2>
-      <p>With PixelPic you can create a unique, personal artwork in just a few steps, using your own pictures...</p>
-      <ul>
-        <li>Create the perfect wedding memory</li>
-        <li>Celebrate a special birthday or anniversary</li>
-        <li>Make a unique yearbook</li>
-        <li>Make anything!</li>
-      </ul>
-      <div id="example_image_container">
-        <img src="" alt="example PixelPic">
-      </div>
+<div class="container">
+
+  <div class="row" id="hero-banner">
+    <div class="panel panel-default">
+      <!-- <img src="https://s3-eu-west-1.amazonaws.com/pixelpic/pixelpic_banner_large.jpg" alt="pixelpic_banner_large"> -->
+      <%= image_tag("logo.jpg") %>
     </div>
   </div>
 
-  <div id="section_2" class="section_container">
-    <div class="section_inner_container">
-      <h2>How It Works</h2>
-      <p>Create your PixelPic in just a few simple steps...</p>
-      <div class="how_to">
-        <p>1) upload your images from your pc or from facebook</p>
-        <img src="" alt="">
-      </div>
-      <div class="how_to">
-        <p>2) select the image you want as the main picture</p>
-        <img src="" alt="">
-      </div>
-      <div class="how_to">
-        <p>3) customise your image with a size and name... and that's it!</p>
-        <img src="" alt="">
-      </div>
-
-    </div>
-  </div>
-
-  <div id="section_3" class="section_container">
-    <div class="section_inner_container">
-      <h2>Gallery</h2>
-      <div>
-        scrollable image gallery
-      </div>
-
-    </div>
-  </div>
-
-  <div id="section_4" class="section_container">
-    <div class="section_inner_container">
-      <h2>Products & Pricing</h2>
-      You can buy your PixelPic in several high quality formats. Click on the images below for more detail...
-      <div>
-        <div>Image 1 - Framed PixelPic</div>
-        <div>Image 2 - Canvas Print PixelPic</div>
-        <div>Image 3 - PixelPic Digital Image Only</div>
-        <div>
-          <h3>Detail 1 - Framed PixelPic</h3>
-          <p>You can buy your high quality PixelPic framed print in the following sizes:</p>
-          <table>
-            <tr>
-              <td>Size</td>
-              <td>Prize</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-            </tr>
-          </table>
+  <div class="row" id="about">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="text-primary">Welcome to PixelPic!</h2>
+          </div>
         </div>
-        <div>
-          <h3>Detail 2 - Canvas Print PixelPic</h3>
-          <p>You can buy your high quality PixelPic canvas print in the following sizes:</p>
-          <table>
-            <tr>
-              <td>Size</td>
-              <td>Prize</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-            </tr>
-          </table>
-        </div>
-        <div>
-          <h3>Detail 3 - PixelPic Digital Image Only</h3>
-          <p>You can buy your high quality PixelPic digital image for just £14.99</p>
+        <div class="row">
+          <div class="col-md-4">
+            <p>With PixelPic you can create a unique, personal artwork in just a few steps, using your own pictures...</p>
+            <ul>
+              <li>Create the perfect wedding memory</li>
+              <li>Celebrate a special birthday or anniversary</li>
+              <li>Make a unique yearbook</li>
+              <li>Make anything!</li>
+              <li>Hover over the image to the right to zoom in....</li>
+            </ul>
+            <div class="text-center">
+              <% if user_signed_in? %>
+              <%= link_to 'Get Started', images_path, class: "btn btn-primary" %>
+              <% else %>
+              <a href="#myModal" data-toggle="modal" class="btn btn-primary">Sign in to Get Started</a>
+              <% end %>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <img class="img-responsive center-block" src="http://placesheen.com/600/400" alt="img">
+          </div>
         </div>
       </div>
-
     </div>
   </div>
 
-  <div id="section_5" class="section_container">
-    <div class="section_inner_container">
-      <h2>Contact Us</h2>
-      <div class="contact">
-        <p>Address</p>
+  <div class="row" id="how-it-works">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="text-primary">How it works</h2>
+            <p>Create your PixelPic in just a few simple steps...</p>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-4">
+            <p>1) upload your own images from your computer or from facebook!</p>
+          </div>
+          <div class="col-md-4">
+            <p>2) select the image you want as the main picture</p>
+          </div>
+          <div class="col-md-4">
+            <p>3) choose which size and layout you want... and that's it!</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <img class="img-responsive center-block" src="http://placesheen.com/300/200" alt="img" style="width:100%">
+          </div>
+          <div class="col-md-4">
+            <img class="img-responsive center-block" src="http://placesheen.com/300/200" alt="img" style="width:100%">
+          </div>
+          <div class="col-md-4">
+            <img class="img-responsive center-block" src="http://placesheen.com/300/200" alt="img" style="width:100%">
+          </div>
+        </div>
       </div>
-      <div class="contact">
-        <p>Map</p>
-      </div>
-      <div class="contact">
-        <ul>
-          <li>tel</li>
-          <li>e</li>
-        </ul>
-      </div>
-      <div class="contact">
-        <ul>
-          <li>twitter</li>
-          <li>fb</li>
-          <li>instagram</li>
-        </ul>
-      </div>
-
     </div>
   </div>
+
+  <div class="row" id="gallery">
+    <div class="panel panel-default">
+      <div class="panel-body text-center">
+        <div id="my-carousel" class="carousel slide" data-ride="carousel">
+
+          <ol class="carousel-indicators">
+            <li data-target="#my-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#my-carousel" data-slide-to="1"></li>
+            <li data-target="#my-carousel" data-slide-to="2"></li>
+          </ol>
+
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img class="img-responsive center-block" src="http://placesheen.com/600/400" alt="img">
+              <div class="carousel-caption">
+                <h3>Wedding Memories</h3>
+              </div>
+            </div>
+            <div class="item">
+              <img class="img-responsive center-block" src="http://placesheen.com/600/400" alt="img">
+              <div class="carousel-caption">
+                <h3>Happy Anniversary</h3>
+              </div>
+            </div>
+            <div class="item">
+              <img class="img-responsive center-block" src="http://placesheen.com/600/400" alt="img">
+              <div class="carousel-caption">
+                <h3>New baby</h3>
+              </div>
+            </div>
+          </div>
+
+          <a class="left carousel-control" href="#my-carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">previous</span>
+          </a>
+
+          <a class="right carousel-control" href="#my-carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row" id="products">
+    <div class="panel panel-default">
+      <div class="panel-body">
+
+      </div>
+    </div>
+  </div>
+
 </div>
