minor update to images/index text

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -22,7 +22,8 @@
     <div class="panel panel-default" id="uploaded_images">
       <div class="panel-heading">
         <h3>Preview Panel</h3>
-        <h4><em class="text-muted">Images will appear here once they are uploaded...</em></h4>
+        <h4><em class="text-muted">Here you can review and delete any unwanted images before moving to step 2</em></h4>
+        <p class="text-muted">Click individual pictures to select them for deletion, or simply delete them all if you want to start again</p>
         <p class="btn btn-default" id="delete_all_images">Delete All</p>
         <p class="btn btn-default" id="delete_selected_images">Delete Selected</p>
       </div>
