--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container" id="pages_index">
 
   <div class="row" id="hero-banner">
     <div class="panel panel-default">
