--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="images_index">
   <div class="row">
     <div class="panel panel-default" id="add_images">
       <div class="panel-heading">
@@ -35,7 +35,7 @@
         <% end %>
       </div>
     </div>
+    <%= render 'fb_modal' %>
   </div>
 </div>
 
-<%= render 'fb_modal' %>
