--- a/app/views/shared/_site_navbar.html.erb
+++ b/app/views/shared/_site_navbar.html.erb
@@ -28,6 +28,7 @@
 
         <% if user_signed_in? %>
           <li><%= link_to 'Get Started', images_path %></li>
+          <li><%= link_to 'My PixelPics', mosaics_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <b class="caret"></b></a>
             <ul class="dropdown-menu">
